<resources>
    <string name="app_name">Blog</string>

    <string name="blog_"> BLOG.</string>
    <string name="blog_create_by">Created By Aayush Boghara</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="share_your_story_with_us">Share your story</string>
    <string name="with_us">with us.</string>

    <string name="login">Login</string>
    <string name="new_here">New here?</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="floating_action_button_use_create_a_blogs">floating Action button Use create a Blogs</string>
    <string name="back_in_the_page">Back in the page</string>
    <string name="add_new_blog_here">Add New Blog here</string>
    <string name="add_image">Add Image</string>
    <string name="blog_title">Blog Title</string>
    <string name="please_start_writing_better_git_commits">Please Start Writing Better Git Commits</string>
    <string name="blog_description">Blog Description</string>
    <string name="add_blog">Add Blog</string>
    <string name="new_blogger">New blogger</string>
    <string name="jul_29_2022">Jul 29, 2022</string>
    <string name="save_article">save article</string>
    <string name="add_new_article">Add new article</string>
    <string name="your_articles">Your Articles</string>
    <string name="edit_your_blog_here">Edit Your Blog here</string>
    <string name="forget_password">Forget password</string>
    <string name="don_t_worry_we_just_need_your_registered_email_address_and_it_s_done">Don\'t worry we just need your registered email address and it\'s done!</string>
    <string name="reset_password">Reset Password</string>

</resources>