<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.WelcomeFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/blog_"
        android:layout_marginTop="110dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blog_"/>

    <TextView
        style="@style/share_your_story_with_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/share_your_story_with_us" />
    <TextView
        style="@style/share_your_story_with_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/with_us"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatBtnLogin"
        style="@style/button_login_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background_red"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/new_here"
        android:textSize="20sp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/love_ya_like_a_sister"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatBtnRegister"
        style="@style/button_login_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_background_blue"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/textView4"
        style="@style/blog_create_by"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/blog_create_by"/>

</LinearLayout>