<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ResetPasswordFragment"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/rectangle_navbar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolbarProfile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/imageBack_2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/back_in_the_page"
                    android:src="@drawable/ic_left_red"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/forget_password"
                    android:textAppearance="@style/forget_pas"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageBack_2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/adlam_display"
        android:textAlignment="center"
        android:textColor="@color/text_color_blue"
        android:textSize="24sp"
        android:text="@string/don_t_worry_we_just_need_your_registered_email_address_and_it_s_done" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:textSize="25sp"
        android:hint="Email"
        android:fontFamily="@font/adlam_display"
        android:textColorHint="@color/text_color_blue"
        android:textColor="@color/text_color_blue"
        android:background="@drawable/button_background_blue"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="25dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"/>

    <TextView
        android:id="@+id/responseMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:text="ayush"
        android:fontFamily="@font/adlam_display"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/text_color_red"
        android:visibility="invisible"/>
    <ProgressBar
        android:id="@+id/resetPasswordProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/text_color_red"
        android:visibility="invisible"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetPassword"
        style="@style/reset_Password_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_background_full_blue"
        android:text="@string/reset_password"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
</LinearLayout>