<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ReadMoreActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/ToolbarProfile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/rectangle_navbar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/backProfile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_chevron_left"
                    android:contentDescription="@string/back_in_the_page" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ablProfile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/article_title_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/please_start_writing_better_git_commits"
                android:textColor="@color/text_color_blue"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/author_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_title_your"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/new_blogger"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/date_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_title_your"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/jul_29_2022"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp"
                tools:ignore="TextContrastCheck" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/author_your"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                android:backgroundTint="@android:color/darker_gray" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_cardView"
                android:layout_width="380dp"
                android:layout_height="300dp"
                android:layout_below="@+id/line"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="380dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/iv_blog"
                        android:layout_width="380dp"
                        android:layout_height="300dp"
                        android:contentDescription="TODO"
                        android:src="@drawable/not_available"
                        tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/article_content_your"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_cardView"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/adlam_display"
                android:text="I recently read a helpful article on Hashnode by Simon Egersand titled 'Write Git Commit Messages Your Colleagues Will Love,' and it inspired me to dive a little deeper into understanding what makes a Git commit good or bad."
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText,VisualLintLongText" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/fab_favorite"
        android:contentDescription="@string/save_article"
        app:backgroundTint="@drawable/fab_bookmark_background"
        app:srcCompat="@drawable/ic_inactive_bookmark"
        app:tint="@color/white" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="favorite like"
        app:backgroundTint="@drawable/fab_like_background"
        app:srcCompat="@drawable/ic_inactive_favorite"
        app:tint="@color/white"
        tools:ignore="ContentDescription,HardcodedText" />
</RelativeLayout>